Fixed bib entry.
Added paragraphy in discussion.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -2304,14 +2304,18 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	file = {Whatever%20next%3F%20Predictive%20brai:/Users/hagen/Zotero/storage/5YRQSALE/Whatever next Predictive brai.pdf:application/pdf}
 }
 
-@article{wiessner_power_2010,
+
+@incollection{wiessner_power_2010,
+	address = {Santa Fe},
 	title = {The power of one? {Big} men revisited},
 	shorttitle = {The power of one?},
-	journal = {The evolution of leadership: transitions in decision-making from small-scale to middle-range societies},
+	booktitle = {The evolution of leadership: transitions in decision-making from small-scale to middle-range societies},
+	publisher = {SAR},
 	author = {Wiessner, Polly},
+	editor = {Vaughn, Kevin J. and Eerkens, Jelmer W. and Kanter, John},
 	year = {2010},
 	pages = {195--222},
-	file = {Wiessner - 2010 - The power of one Big men revisited.pdf:/Users/hagen/Zotero/storage/ART38U5F/Wiessner - 2010 - The power of one Big men revisited.pdf:application/pdf}
+	file = {Wiessner - 2010 - The power of one Big men revisited.pdf:/Users/zgarf/Zotero/storage/6WKKNL9Q/Wiessner - 2010 - The power of one Big men revisited.pdf:application/pdf}
 }
 
 @article{weber_domain-specific_2002,
