--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -326,11 +326,17 @@ Figure \@ref(fig:groupsex) is consistent with a negative relationships between p
 
 Leadership and high social status are expected to be associated with particular suites of characteristics, which potentially vary by cultural or social context, personality, or via other inter-individual variation [@cheng_two_2013; @von_rueden_roots_2014; @hogan_personality_2020; @lukaszewski_extraversion_2015; @henrich_evolution_2001]. Exploratory analyses reported here suggest multiple leadership phenotypes and associated features. 
 
+<!-- Qualities features -->
+
 There is likely a strong connection between shamanism and ritual-based influence and the dominance style of leadership. Super natural abilities, being feared, aggressiveness, and strong authority formed a strong cluster of leadership qualities (Figure \@ref(fig:cluster)A, *Dominant/shaman* cluster $AU = 96$). Artistic performance is also implicated in this style of leadership and ceremonial, artistic performances by shamans are common displays which often incorporate the superhuman abilities of shamans [@singh_cultural_2017]. @winkelman1987cross found that in 47% of societies sampled from the HRAF ($n=43$) shamans were associated with providing decision-making services and associated with military power. Providing ritual functions and military leadership are common (documented in over 50% of societies here) functions leaders serve (see Figure \@ref(fig:varsupport)). Widespread preferences for egalitarianism and social equality are likely strong drivers of leader preferences across diverse societies [@cheng_dominance_2019], but shamanism and ritual based contexts represent a social domain in which ideologies support dominance-based leadership. 
 
 We have also identified a broad suite of positive personal characteristics, including many of the most cross-culturally frequent qualities of leadership, which generally correspond to prestige and charismatic leadership [@van_vugt_dual_2019; @cheng_pride_2010; @grabo_charismatic_2016; @henrich_evolution_2001; @price_evolution_2014; @von_rueden_roots_2014]. Being knowledgeable or intelligent and highly experienced or accomplished cluster closely with high social status (the three most cross-culturally frequent qualities of leaders). Other personal characteristics, such as having a favorable personality, humility, oratory skill, charisma, and interpersonal skills are also associated with this feature of leadership (Figure \@ref(fig:cluster)A, *Positive personal characteristics* cluster $AU = 100$.). These features  suggest a strong link between prestige-based leadership, associated with deference towards individuals with special kills, high intelligence, and accomplishments [@cheng_dominance_2019; @van_vugt_dual_2019; @henrich_evolution_2001], and charismatic leadership, associated with oratory skills, high charisma, confidence, and interpersonal skills [@den_hartog_culture_1999; @grabo_charismatic_2016; @howell_role_2005]. 
 
-The most common benegits associated with leadership are material resources, increased social status, and social services (See Figure \@ref(fig:varsupportcb)). Measures of material and social wealth coupled with reproductive success represent a feature of leadership qualities descriptive of benefits of social influence and high social status (Figure \@ref(fig:cluster)A, *Material, social, & reproductive success* cluster $AU = 96$.). 
+The most common benefits associated with leadership are material resources, increased social status, and social services (See Figure \@ref(fig:varsupportcb)). Measures of material and social wealth coupled with reproductive success represent a feature of leadership qualities descriptive of benefits of social influence and high social status (Figure \@ref(fig:cluster)A, *Material, social, & reproductive success* cluster $AU = 96$.). 
+
+<!-- Functions features -->
+
+Results suggest X features of the functions of leaders. Leaders may serve various prosocial functions, such as providing subsistence and distributing resources, they may be tasked with providing hospitality services to guests or followers, they function to protect the group via a variety of behaviors, and very commonly are leading in various social functions tied to cultural values and social practices (Figure \@ref(fig:cluster)B, *Prosocial* cluster $AU = 95$).
 
 
 
