--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -231,7 +231,7 @@ The most common *qualities* of leaders are being of high social status (document
 
 ## Cluster analyses
 
-Within each cluster analyses, we computed the distance between two variables as $1 - cor (v_i, v_j)$, so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between uncorrelated variables us close to $2$. Using the pvclust package [@suzuki_pvclust2006] we clustered the variables using the matrix of all pairwise distances using the Ward agglomeration algorithm. 
+Within each cluster analyses, we computed the distance between two variables as $1 - cor (v_i, v_j)$, so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between negatively correlated variables is close to $2$. Using the pvclust package [@suzuki_pvclust2006] we clustered the variables using the matrix of all pairwise distances using the Ward agglomeration algorithm. 
 
 Figure \@ref(fig:cluster)A displays a dendrogram from the cluster analysis of the `r length(quality_vars)` leader quality variables and Figure \@ref(fig:cluster)B displays a dendrogram from the cluster analysis of the `r length(function_vars)` leader function variables. Each cluster analysis includes two estimates of significance for how strongly each cluster within the dendrogram is supported by the data. We rely on the AU (Approximately Unbiased) *p* values, which are computed by multiscale bootstrap resampling and represented as percentages (e.g., clusters with AU values $>95$ are strongly supported, and the top-level clusters are automatically highlighted by rectangles).
 
@@ -241,13 +241,13 @@ Figure \@ref(fig:cluster)A displays a dendrogram from the cluster analysis of th
 knitr::include_graphics("Figures/m_pvclust.both.png")
 ```
 
-The leader quality cluster analysis (Figure \@ref(fig:cluster)A) identified two top-level clusters. Within each top-level cluster we identify two interpretable and generally strongly supported sub-clusters which are annotated with text. Within the first top-level cluster, we identify a dominant/shaman cluster, which suggests a strong link between dominance-based leadership (i.e., *Authority*, *Aggressiveness*, *Feared*) and shamanism (i.e., *Supernatural*, *Artistic performance*). The second sub-cluster includes qualities of leaders related to material, social, and reproductive success (i.e., *Wealthy*, *Social contacts*, and *Polygnous*). Within the second top-level, we identify a sub-cluster of positive personal characteristics (i.e., *Knowledgeable/intelligent*, *Proper behavior*, *Charisma*, *Fairness*) and a sub-cluster of measures related to social strategies and health (i.e., *Strategic planner*, *Generosity*, *Physically formidable*). 
+The leader quality cluster analysis (Figure \@ref(fig:cluster)A) identified two top-level clusters. Within each top-level cluster we identify two interpretable and generally strongly supported sub-clusters which are annotated with text. Within the first top-level cluster, we identify a dominant/shaman cluster, which suggests a strong link between dominance-based leadership (i.e., *Authority*, *Aggressiveness*, *Feared*) and shamanism (i.e., *Supernatural*, *Artistic performance*). The second sub-cluster includes qualities of leaders related to material, social, and reproductive success (i.e., *Wealthy*, *Social contacts*, and *Polygynous*). Within the second top-level, we identify a sub-cluster of positive personal characteristics (i.e., *Knowledgeable/intelligent*, *Proper behavior*, *Charisma*, *Fairness*) and a sub-cluster of measures related to social strategies and health (i.e., *Strategic planner*, *Generosity*, *Physically formidable*). 
 
 The leader functions cluster analysis (Figure \@ref(fig:cluster)B) also identified two top-level clusters; the larger of which we identify as an organizational functions cluster (i.e., *Organize cooperation*, *Military command*, *Resolve conflict*) and the smaller a prosociality cluster (i.e., *Social functions*, *Distribute resources*, *Hospitality*). 
 
 ## Principle components analyses
 
-A logistic PCA on the `r length(quality_vars)` coded leader quality variables, with rank $k = `r dim(logpca_model_qualities$U)[2]`$ and  $m = `r logpca_model_qualities$m`$ optimized by cross-validation, explained `r signif(logpca_model_qualities$prop_deviance_expl, 3)*100`% of the deviance. We draw on the first two leader quality components for interpretation and additional analyses (see Figure \@ref(fig:qualitiesPCplot)). We identify the first component (PC1) as a *Prestige vs. Dominance* measure. Low values on Leader Qualities PC 1 are strongly associated with the variables *Experienced/accomplished* and *Knowledgeable/intelligence* and moderately associated with *Confidence* and *Bravery*. High values are strongly associated with *Polygnous* and *Authority* and moderately associated with *High quality spouse*. Therefore, the "dominance" side of the *Prestige vs. Dominance* component is also closely liked to reproduction, as demonstrated in the cluster analysis (Figure \@ref(fig:cluster)). Measures of physical formidability and aggressiveness are also moderately associated with the "dominance" side of this component. The second leader qualities component we identify as an *In-group favoritism vs. Social Status* measure. Low values on Leader Qualities PC 2 are strongly associated with *Aggressiveness*, *Bravery*, *Xenophobia*, and *Loyalty*. High Values are strongly associated with *High status* and moderately associated with *Fairness*, *Age*, and *Decisiveness/decision-making*. Therefore, Leader Qualities PC 2 also reflects elements of a prestige-dominance distinction in contrasting aggressiveness with high social status.
+A logistic PCA on the `r length(quality_vars)` coded leader quality variables, with rank $k = `r dim(logpca_model_qualities$U)[2]`$ and  $m = `r logpca_model_qualities$m`$ optimized by cross-validation, explained `r signif(logpca_model_qualities$prop_deviance_expl, 3)*100`% of the deviance. We draw on the first two leader quality components for interpretation and additional analyses (see Figure \@ref(fig:qualitiesPCplot)). We identify the first component (PC1) as a *Prestige vs. Dominance* measure. Low values on Leader Qualities PC 1 are strongly associated with the variables *Experienced/accomplished* and *Knowledgeable/intelligence* and moderately associated with *Confidence* and *Bravery*. High values are strongly associated with *Polygynous* and *Authority* and moderately associated with *High quality spouse*. Therefore, the "dominance" side of the *Prestige vs. Dominance* component is also closely liked to reproduction, as demonstrated in the cluster analysis (Figure \@ref(fig:cluster)). Measures of physical formidability and aggressiveness are also moderately associated with the "dominance" side of this component. The second leader qualities component we identify as an *In-group favoritism vs. Social Status* measure. Low values on Leader Qualities PC 2 are strongly associated with *Aggressiveness*, *Bravery*, *Xenophobia*, and *Loyalty*. High Values are strongly associated with *High status* and moderately associated with *Fairness*, *Age*, and *Decisiveness/decision-making*. Therefore, Leader Qualities PC 2 also reflects elements of a prestige-dominance distinction in contrasting aggressiveness with high social status.
 
 ```{r qualitiesPCplot, fig.width=15, fig.height=10, fig.cap="Logistic PCA loadings of coded leader qualitiy variables on the first two components. PC 1 is identified as a *Prestige vs. Dominance* component and PC 2 is identified as an *In-group favoritism vs. Social Status* component."}
 logisticPCA_loadings_plot(logpca_model_qualities, data = pca_data_qualities2)
