Working on discussion.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -2305,6 +2305,27 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 }
 
 
+@article{marlowe_hunter-gatherers_2005,
+	title = {Hunter-gatherers and human evolution},
+	volume = {14},
+	doi = {10.1002/evan.20046},
+	journal = {Evolutionary Anthropology},
+	author = {Marlowe, F. W.},
+	year = {2005},
+	keywords = {Diet and Nutrtion, Hunters and Gatherers, MA\_drugs, Zach Nutrition Paper},
+	pages = {54--67},
+	annote = {The following values have no corresponding Zotero field:number: 2issn: coden: doi: 10.1002/evan.20046citation-id: Marlowe 2005modified-date: 2015-03-17 02:21:45 +0700},
+	file = {Hunter-gatherers%20and%20human%20evo:/Users/zgarf/Zotero/storage/QW9X6LLS/Hunter-gatherers and human evo.pdf:application/pdf}
+}
+
+@book{lee_cambridge_1999,
+	title = {The {Cambridge} encyclopedia of hunters and gatherers},
+	publisher = {Cambridge University Press},
+	author = {Lee, Richard B. and Daly, Richard Heywood},
+	year = {1999},
+	annote = {The following values have no corresponding Zotero field:issn: coden: doi: electronic-resource-num: citation-id: Lee 1999modified-date: 2014-06-04 07:12:15 +0700}
+}
+
 @incollection{wiessner_power_2010,
 	address = {Santa Fe},
 	title = {The power of one? {Big} men revisited},
@@ -8202,6 +8223,41 @@ Resampling},
 	keywords = {Biological, Biological Evolution, Choice Behavior, Competitive Behavior, Cooperative Behavior, Models, Social Marketing},
 	pages = {47--55}
 }
+
+
+@article{pupu_challenges_2018,
+	title = {The {Challenges} of {Village} {Courts} and {Operation} {Mekim} {Save} among the {Enga} of {Papua} {New} {Guinea} {Today}: {A} {View} from the {Inside}},
+	copyright = {Author/s retain copyright},
+	issn = {1328-7854},
+	shorttitle = {The {Challenges} of {Village} {Courts} and {Operation} {Mekim} {Save} among the {Enga} of {Papua} {New} {Guinea} {Today}},
+	url = {https://openresearch-repository.anu.edu.au/handle/1885/144696},
+	abstract = {This paper addresses the question of how customary law courts maintain justice and restore community relations through decades of rapid change including: (1) how the Enga navigate the legal pluralism of customary and formal justice systems, (2) the problems of adapting customary laws to changing circumstances and (3) the problems that arise with young untrained magistrates who are not fully conversant in custom. Data will be drawn from some 1000 customary court cases observed from 2008 - 2016 and periodic workshops with magistrates in village courts and Operation Mekim Save (OMS), a branch of village courts designed to handle inter-clan conflicts. All magistrates in the study agreed that the success of village courts and OMS could be largely attributed to their flexibility and processes. Still, most magistrates recommended that some rules and guidelines be put in place for effective decision-making in matters such as marriage in order to reduce domestic violence and land inheritance disputes to decrease intra-clan conflicts.  They also recommended that specially trained panels of magistrates be appointed to hear cases about sorcery and HIV/AIDS accusations, in response to complaints about such matters, which are relatively new to Enga and that raise significant challenges relating to matters of evidence and proof. Both experienced and younger magistrates requested further training; the content of possible training is addressed. Magistrates also emphasised the need for cultural education launched in the schools of Enga in 2016, so that future generations will be able to grasp the anchoring principles of Enga custom that guide decisions.},
+	language = {en\_AU},
+	urldate = {2019-12-02},
+	journal = {http://bellschool.anu.edu.au/experts-publications/publications/6233/dp-201801-challenges-village-courts-and-operation-mekim-save},
+	author = {Pupu, Nitze and Wiessner, Polly},
+	year = {2018},
+	file = {Full Text PDF:/Users/zgarf/Zotero/storage/46IVYW6M/Pupu and Wiessner - 2018 - The Challenges of Village Courts and Operation Mek.pdf:application/pdf;Snapshot:/Users/zgarf/Zotero/storage/CWVBC3ZG/144696.html:text/html}
+}
+
+@article{wiessner_collective_2019,
+	title = {Collective {Action} for {War} and for {Peace}: {A} {Case} {Study} among the {Enga} of {Papua} {New} {Guinea}},
+	volume = {60},
+	issn = {0011-3204},
+	shorttitle = {Collective {Action} for {War} and for {Peace}},
+	url = {https://www.journals.uchicago.edu/doi/abs/10.1086/702414},
+	doi = {10.1086/702414},
+	abstract = {Drawing on data from the Enga of Papua New Guinea, I (1) compare the challenges in organizing collective action for warfare in small-scale societies with those for peacemaking; (2) identify the many different channels of appeal that are interwoven to elicit the cooperation of individuals with different agendas: the rational or pragmatic, the emotional and the ritual; (3) propose that warfare is a dynamic process involving continual change in response to internal group conflicts of interest that generate new institutions, rules, and morals to facilitate collective action; and (4) show how the juxtaposition of war and active peacemaking is an effective strategy for building social complexity. This raises the question of why active peacemaking was relatively rare in small-scale societies or if it indeed was in the past.},
+	number = {2},
+	urldate = {2019-06-10},
+	journal = {Current Anthropology},
+	author = {Wiessner, Polly},
+	month = feb,
+	year = {2019},
+	pages = {224--244},
+	file = {Snapshot:/Users/zgarf/Zotero/storage/6RXE4HDZ/702414.html:text/html;Wiessner - 2019 - Collective Action for War and for Peace A Case St.pdf:/Users/zgarf/Zotero/storage/CTVM5GTQ/Wiessner - 2019 - Collective Action for War and for Peace A Case St.pdf:application/pdf}
+}
+
 
 @article{von_rueden_sex_2018,
 	title = {Sex differences in political leadership in an egalitarian society},
