--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -114,7 +114,11 @@ NEED CONCLUSTION STATEMENT/PARAGRAPH.
 
 Evolutionary theoretical models and empirical studies often seek to integrate findings within a broad framework of human cultural diversity. The universality of human leadership systems and the incredible diversity among the qualities of leaders across cultures and contexts and the functions leaders serve is difficult to capture. Scholars are then left to haphazardly self-select ethnographic cases or rely on the self-selected reviews of others for generalizations [e.g., @garfield_review_2019; @von_rueden_leadership_2015]. Here, we seek to provide the first empirical and near comprehensive view of the qualities and functions of leaders across human societies from a representative cross-cultural sample. We also provide the first comparative view describing the costs and benefits of leadership for both leaders and followers in an evolutionary biological framework. We also aim to explore how the qualities and functions of leaders vary across social contexts and levels of cultural complexity.
 
-In sum, we seek to empirically and systematically accomplish the following four goals: 1) identify the most cross-culturally frequent *qualities of leaders* and the *functions they serve*; 2) identify *features* of the qualities and functions of leaders in reference to theoretical models or novel interpretations; 3) identify the most cross-culturally frequent *costs and benefits* of leadership for both leaders and followers; and 4) explore relationships between measures of leader qualities and functions with group structure and population-level measures. Such exploratory results stand to facilitate more fine-grained approaches within leadership studies and greater theoretical and empirical work beyond community leadership, while also revealing the importance of a broad, cross-cultural perspective in understanding the psychology and cultural patterning of perhaps the most foundational component of human social behavior and organization. 
+In sum, we seek to empirically and systematically accomplish the following three goals: 1) identify the most cross-culturally frequent *qualities of leaders* and the *functions they serve*; 2) identify *features* of the qualities and functions of leaders in reference to theoretical models or novel interpretations; 3) identify the most cross-culturally frequent *costs and benefits* of leadership for both leaders and followers. Such exploratory results stand to facilitate more fine-grained approaches within leadership studies and greater theoretical and empirical work beyond community leadership, while also revealing the importance of a broad, cross-cultural perspective in understanding the psychology and cultural patterning of perhaps the most foundational component of human social behavior and organization.
+
+<!-- and 4) explore relationships between measures of leader qualities and functions with group structure and population-level measures.  -->
+
+ 
 
 
 # Methods
@@ -162,7 +166,7 @@ We also performed hierarchical cluster analysis on our quality and function vari
 
 Our third goal was to determine which leader and follower benefits and costs were most commonly mentioned in the ethnographic record.
 
-Our fourth goal was to explore associations between the principle components of leader qualities and functions, and culture-level variables such as mode of subsistence, social complexity, population density, and group size, and effects of group type, such as political groups versus kin groups. We used linear mixed effects models from the lme4 package [@bates2015], with PC1 and PC2 as outcome variables, culture-level variables as predictors, and documents nested within cultures as grouping variables for random intercepts. 
+<!-- Our fourth goal was to explore associations between the principle components of leader qualities and functions, and culture-level variables such as mode of subsistence, social complexity, population density, and group size, and effects of group type, such as political groups versus kin groups. We used linear mixed effects models from the lme4 package [@bates2015], with PC1 and PC2 as outcome variables, culture-level variables as predictors, and documents nested within cultures as grouping variables for random intercepts.  -->
 
 All analyses were conducted with `r R.version.string`.
 
@@ -243,7 +247,7 @@ The leader quality cluster analysis (Figure \@ref(fig:cluster)A) identified two 
 
 <!-- A logistic PCA on the `r length(quality_vars)` coded leader quality variables, with rank $k = `r dim(logpca_model_qualities$U)[2]`$ and  $m = `r logpca_model_qualities$m`$ optimized by cross-validation, explained `r signif(logpca_model_qualities$prop_deviance_expl, 3)*100`% of the deviance. We draw on the first two leader quality components for interpretation and additional analyses (see Figure \@ref(fig:qualitiesPCplot)). We identify the first component (PC1) as a *Prestige vs. Dominance* measure. Low values on Leader Qualities PC 1 are strongly associated with the variables *Experienced/accomplished* and *Knowledgeable/intelligence* and moderately associated with *Confidence* and *Bravery*. High values are strongly associated with *Polygnous* and *Authority* and moderately associated with *High quality spouse*. Therefore, the "dominance" side of the *Prestige vs. Dominance* component is also closely liked to reproduction, as demonstrated in the cluster analysis (Figure \@ref(fig:cluster)). Measures of physical formidability are also moderately associated with the "dominance" side of this component. The second leader qualities component we identify as an *In-group favoritism vs. Social Status* measure. Low values on Leader Qualities PC 2 are strongly associated with *Aggressiveness*, *Bravery*, *Xenophobia*, and *Loyalty*. High Values are strongly associated with *High status* and moderately associated with *Fairness*, *Age*, and *Decisiveness/decision-making*. Therefore, Leader Qualities PC 2 also reflects elements of a prestige-dominance distinction in contrasting aggressiveness with high social status. -->
 
-<!-- ```{r qualitiesPCplot, fig.width=15, fig.height=10, fig.cap="Logistic PCA loadings of coded leader qualitiy variables on the first two components. PC 1 is identified as a *Prestige vs. Dominance* component and PC 2 is identified as an *In-group favoritism vs. Social Status* component."} -->
+<!-- ```{r qualitiesPCplot, fig.width=15, fig.height=10, fig.cap="Logistic PCA loadings of coded leader quality variables on the first two components. PC 1 is identified as a *Prestige vs. Dominance* component and PC 2 is identified as an *In-group favoritism vs. Social Status* component."} -->
 <!-- logisticPCA_loadings_plot(logpca_model_qualities, data = pca_data_qualities2) -->
 <!-- ``` -->
 
@@ -347,7 +351,9 @@ This study is based on the ethnographic record. Our methods are designed to capt
 
 # Conclusion
 
-These exploratory results provide an empirical foundation for future research on leadership across or within diverse cultural settings and across all levels of social organization.
+These exploratory results provide an empirical foundation for future research on leadership across or within diverse cultural settings and across all levels of social organization. Political leadership is common across a broad range of populations, including among relatively small-scale and egalitarian hunter-gatherers. Among hunter-gatherers, however, leaders more frequently emerge within residential subgroups and kin groups. Given the vast majority of human evolutionary history involved subsistence economies characterized by hunting and gathering and greater residential mobility [@lee_cambridge_1999; @marlowe_hunter-gatherers_2005], these results suggest leadership within kin groups and local subgroups likely has a long evolutionary history. Despite a universal male-bias in political leadership at the community level, women are expected to have greater decision-making responsibilities and adopt leadership roles within families and local groups [@brown_her_1985; @garfield_evolutionary_2019; @hagen_leadership_2019; @smith_obstacles_2018; @von_rueden_sex_2018]. 
+
+Contemporary theoretical models of the evolution of leadership often emphasize leaders roles in organizing collective action and in managing between group conflicts [@hooper_theory_2010; @pietraszewski_evolution_2019; @price_evolution_2014]. Results here do support the important functions of leaders in organizing cooperation and facilitating social functions -- services which provide direct benefits to the group. However, the ubiquity of conflict resolution as a function of leaders across social contexts calls for greater attention to the roles of leaders of all types in managing intra-group conflict between group members -- services tailored to provide direct benefits to a few individuals and more indirect group benefits. [@glowacki_leadership_2015; @wiessner_collective_2019; @pupu_challenges_2018]. 
 
 
 
