Commenting out unneeded analyses in analyses script.
Additions in bib file.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -7636,7 +7636,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	abstract = {Observation of leadership in small-scale societies offers unique insights into the evolution of human collective action and the origins of sociopolitical complexity. Using behavioural data from the Tsimane forager-horticulturalists of Bolivia and Nyangatom nomadic pastoralists of Ethiopia, we evaluate the traits of leaders and the contexts in which leadership becomes more institutional. We find that leaders tend to have more capital, in the form of age-related knowledge, body size or social connections. These attributes can reduce the costs leaders incur and increase the efficacy of leadership. Leadership becomes more institutional in domains of collective action, such as resolution of intragroup conflict, where collective action failure threatens group integrity. Together these data support the hypothesis that leadership is an important means by which collective action problems are overcome in small-scale societies},
 	number = {1683},
 	journal = {Philos Trans R Soc Lond B Biol Sci},
-	author = {Glowacki, Luke and von Rueden, Christopher R.},
+	author = {Glowacki, Luke and {von Rueden}, Christopher R.},
 	year = {2015},
 	pmcid = {PMC4633846},
 	keywords = {collective action, Cooperation, Leadership}
