Modified cluster dendrograms. Minor edits to texts.

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -150,7 +150,7 @@ For additional details on ethnographic sampling and creation of the *leadershipd
 
 ## Statistical analysis
 
-We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most and least frequently noted in the ethnographic record. We computed confidence intervals for the proportion of text records supporting each variable using generalized linear mixed effects models and random intercepts based on document authors nested within cultures. We computed confidence intervals for the proportion of cultures with evidence for each variable using a cluster bootstrap.
+We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most and least frequently noted in the ethnographic record. We computed confidence intervals for the proportion of text records supporting each variable using generalized linear mixed effects models and random intercepts based on document authors nested within cultures (which partially accounts for potential variation due to differences in ethnographers such as gender, nationality, or theoretical framework). We computed confidence intervals for the proportion of cultures with evidence for each variable using a cluster bootstrap.
 
 We then explored "features" in our data. There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. We used hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using both $1-cor(x, y)$ and asymmetric binary distance (Jaccard distance), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the pvclust package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
 
@@ -215,7 +215,7 @@ As Figure \@ref(fig:groupsex) reveals, the distribution of text records by group
 
 ## Variable distributions
 
-For each of the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` coded variables (see Tables \@ref(tab:qualfuncvars) and \@ref(tab:costbenefitvars) ), we computed the percentage of text records that provided support, estimating standard errors using a binomial generalized linear mixed effects model with a random intercept for author nested within culture (which partially accounts for potential variation due to differences in ethnographers such as gender, nationality, or philosophy). See Figure \@ref(fig:varsupport).
+For each of the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` coded variables (see Tables \@ref(tab:qualfuncvars) and \@ref(tab:costbenefitvars) ), we computed the percentage of text records that provided support, and we computed the percentage of cultures with at least one text record providing support for that variable. See Figure \@ref(fig:varsupport).
 
 ```{r varsupport, fig.width=15, fig.height=15, fig.cap="Support for each coded variable of leader functions (top) and qualities (bottom). Blue circles: percent of text records with evidence of support (95% CI computed with a binomial mixed effects models with random intercept for author nested within culture). Red triangles: percent of cultures with evidence of support (95% CI computed with a cluster bootstrap)."}
 plot.variable.support
